--- a/docroot/themes/custom/civic/civic-library/components/00-base/base.stories.scss
+++ b/docroot/themes/custom/civic/civic-library/components/00-base/base.stories.scss
@@ -4,6 +4,7 @@
 // Set default styles for the Storybook viewport.
 #root {
   font-family: sans-serif;
+  padding: civic-space(2);
 }
 
 .sb-show-main.sb-main-centered #root {
